--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,65 @@
-body {
-   
-}
-
-#bgimage {
-  position:fixed;
+img {
+  position: fixed;
   z-index: -1;
   right:0;
-  bottom:0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
+  
 }
 
 .container {
-  text-align: center;         /* centra il contenuto*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container h1 {
+  color: rgba(255, 255, 255);
+}
+
+.login-form {
+  height:310px;
+  width:270px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(0, 0 ,0 ,0.1);
+  box-shadow: 0 0 10px rgba(0, 0 ,0 ,1);
+  color: #ffff;
+  padding-top: 60px;
+}
+
+.login h3{
+  letter-spacing: normal;
 }
 
 input {
- 
+  width: 200px;
+  margin-top: 20px;
+  background: transparent; 
+  outline: none;
+  padding: 10px;
+  border-radius: 30px;
+  box-shadow: 0 0 4px #ffff;
+  transition: box-shadow 0.5s ease;
 }
 
-#btn_login {
- 
+.btn {
+  padding: 5px 20px;
+  margin-top: 30px;
+  background: transparent;
+  border-radius: 30px;
+  box-shadow: 0 0 4px #ffff;
+  cursor: pointer;
 }
+
+input[placeholder]:focus {
+  color: #ffff;
+}
+
+input:focus , .btn:hover {
+  box-shadow: 0 0 4px #ffff;
+}
+
+
